# simdvision

./: .clangd  .gitignore  CMakeLists.txt  LICENSE
cmake/: ArchitectureSupportCheck.cmake  NasmSupport.cmake  VTuneSupport.cmake
libsimdcnn/: CMakeLists.txt
libsimdcnn/benchmark/: CMakeLists.txt  benchmark_relu.cpp  benchmark_vecadd.cpp
libsimdcnn/include/simdcnn/: debug.h  def.h  errors.h  simdcnn.h
libsimdcnn/src/: debug.c  simdcnn.c
libsimdcnn/src/asm/x86/avx2/: simdcnn_relu_f32.asm  simdcnn_relu_f64.asm  simdcnn_sgemm.asm  simdcnn_sgemm.c  simdcnn_sgemm.h  simdcnn_vecadd_f32.asm  simdcnn_vecadd_f64.asm
libsimdcnn/tests/: CMakeLists.txt  test_relu.cpp  test_sgemm.cpp  test_vecadd.cpp
simdcnn-cli/: CMakeLists.txt
simdcnn-cli/src/: main.c
